k8s/mongodb-deployment.yaml
# apiVersion: apps/v1
# kind: Namespace
# metadata:
#   name: mongo
#   labels:
#     name: mongo
# ---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mongodb
  labels:
    app: mongodb
  namespace: mongo
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mongodb
  template:
    metadata:
      labels:
        app: mongodb
    spec:
      containers:
      - name: mongodb
        image: mongo:4.2.3
        ports:
        - containerPort: 27017
        resources:
          requests:
            cpu: "0.2"
            memory: 300Mi
          limits:
            cpu: "1.0"
            memory: 300Mi
        readinessProbe:
          tcpSocket:
            port: 27017
          initialDelaySeconds: 50
          timeoutSeconds: 2
          periodSeconds: 20
          failureThreshold: 5
        livenessProbe:
          tcpSocket:
            port: 27017
          initialDelaySeconds: 50
          timeoutSeconds: 2
          periodSeconds: 20
          failureThreshold: 5
      serviceAccountName: api-service-account
---
apiVersion: v1
kind: Service
metadata:
  name: mongodb
  labels:
    app: mongodb
  namespace: mongo
spec:
  ports:
  - port: 27017
    protocol: TCP
  selector:
    app: mongodb
