k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: gateway-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  defaultBackend:
    service:
      name: gateway
      port:
        number: 8080
  rules:
  - host: microservices-cluster.info
    http:
      paths:
      - path: /employee(.*)
        backend:
          service:
            name: employee
            port:
              number: 8080
        pathType: Prefix
      - path: /department(.*)
        backend:
          service:
            name: department
            port:
              number: 8080      
        pathType: Prefix
      - path: /organization(.*)
        backend:
           service:
            name: organization
            port:
              number: 8080
        pathType: Prefix
      - path: /gateway(.*)
        backend:
          service:
            name: gateway
            port:
              number: 8080
        pathType: ImplementationSpecific
